# mcp-vertex-ai-retail-search-server

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.ko.md  README.md  deploy_to_cloud_run.py  pyproject.toml  requirements.txt  server.py
src/: server.py
tests/: test_main.py  test_server.py
